--- a/index.html
+++ b/index.html
@@ -14,197 +14,140 @@
 <body class="shower list">
 
     <header class="caption">
-        <h1>Shower Presentation Engine</h1>
-        <p>Yours Truly, Famous Inc.</p>
+        <h1>Creating Email templates</h1>
+        <p>Kristina Vasilevich</p>
     </header>
 
     <section class="slide" id="cover">
-        <h2>Shower Presentation Engine</h2>
-        <p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-        <figure>
-            <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
+        <h2>Создаем email не как в 2007</h2>
+            <img class="cover" src="pictures/cover.png" alt="Colorful envelops sitting on the tree">
         <style>
             #cover h2 {
                 margin: 30px 0 0;
-                color: white;
+                color: #333333;
                 text-align: center;
                 font-size: 70px;
             }
-
-            #cover p {
-                margin: 10px 0 0;
-                text-align: center;
-                color: white;
-                font-style: italic;
-                font-size: 20px;
-            }
-
-            #cover p a {
-                color: white;
+            #cover img {
+                top: 63%;
             }
         </style>
     </section>
 
     <section class="slide">
-        <h2>Shower key features</h2>
+        <h2>Содержание</h2>
         <ol>
-            <li>Built on HTML, CSS and JavaScript</li>
-            <li>Works in all modern browsers</li>
-            <li>Themes are separated from engine</li>
-            <li>Fully keyboard accessible</li>
-            <li>Printable to PDF</li>
-        </ol>
-        <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
-    </section>
-
-    <section class="slide">
-        <h2>Plain text on your slides</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-
-    <section class="slide">
-        <h2>Two columns if you like</h2>
-        <div class="columns two">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-        </div>
-    </section>
-
-    <section class="slide">
-        <h2>All kind of lists</h2>
-        <ol>
-            <li>Simple lists are marked with bullets</li>
-            <li>Ordered lists begin with a number</li>
-            <li>You can even nest lists one inside another
-                <ul>
-                    <li>Or mix their types</li>
-                    <li>But do not go too far</li>
-                    <li>Otherwise audience will be bored</li>
-                </ul>
-            </li>
-            <li>Look, seven rows exactly!</li>
+            <li>Особенности создания email</li>
+            <li>Способы создания шаблона email</li>
+            <li>Примеры создания шаблона email</li>
+            <li>Тестирование email</li>
         </ol>
     </section>
 
     <section class="slide">
-        <h2>Serious citations</h2>
+        <h2>1. Особенности создания email</h2>
+        <ul>
+            <li>отсутствие поддержки HTML5 и CSS3 email-клиентами</li>
+            <li>верстка таблицами</li>
+            <li>использование ограниченного числа HTML-тэгов</li>
+            <li>использование inline стилей</li>
+        </ul>
+    </section>
+
+    <section class="slide">
+        <h2>Поддержка HTML5 и CSS3 email-клиентами</h2>
         <figure>
-            <blockquote>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-            </blockquote>
-            <figcaption>Marcus Tullius Cicero</figcaption>
+            <img class="center-image" src="pictures/flex_support.png" alt="Table of display:flex support for email clients">
+            <figcaption><code>display: flex</code> support by <a href="https://www.caniemail.com/search/?s=flex">Can I Email</a></figcaption>
         </figure>
+        <style>
+            .center-image {
+                max-width: 100%;
+            }
+            .center-image ~ figcaption {
+                text-align: center;
+            }
+        </style>
     </section>
 
-    <section class="slide">
-        <h2>Code samples</h2>
+    <section class="slide" id="table">
+        <h2>Верстка таблицами</h2>
         <pre>
-            <code>&lt;!DOCTYPE html&gt;</code>
-            <code class="mark">&lt;html lang="en"&gt;</code>
-            <code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-            <code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-            <code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-            <code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-            <code><mark>&lt;/head&gt;</mark></code>
+            <code class="mark">&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"&gt;</code>
+            <code>...</code>
+            <code>&lt;body&gt;</code>
+            <code><mark class="important">&lt;table</mark> border="0" cellpadding="0" cellspacing="0" style="margin:0; padding:0" <mark class="important">&gt;</mark></code>
+            <code>  <mark class="important">&lt;tr&gt;</mark></code>
+            <code>    <mark class="important">&lt;td&gt;</mark></code>
+            <code>      <mark class="important">&lt;center&gt;</mark></code>
+            <code>        <mark class="important">&lt;span</mark> style="color: #333333; font: 10px Arial, sans-serif; line-height: 30px;
+              -webkit-text-size-adjust:none; display: block;" <mark class="important">&gt;</mark>
+              Ваш волшебный контент
+        &lt;/span&gt;</code>
+            <code>        <mark class="important">&lt;a</mark> href="go_to_my_site.com"<mark class="important">&gt;</mark> Ваша волшебная ссылка&lt;/a&gt;</code>
+            <code>        <mark class="important">&lt;img</mark> src="perfect_image.png" alt="Perfect image" <mark>width="200" height="70"</mark> <mark class="important">&gt;</mark></code>
+            <code>      ...</code>
+            <code>&lt;/body&gt;</code>
         </pre>
+        <style>
+            code {
+                font-size: 16px;
+            }
+            #table {
+                padding-top: 30px;
+            }
+        </style>
     </section>
 
     <section class="slide">
-        <h2>Even tables</h2>
-        <table>
-        <tr>
-            <th scope="col">Locavore</th>
-            <th>Umami</th>
-            <th>Helvetica</th>
-            <th>Vegan</th>
-        </tr>
-        <tr>
-            <th scope="row">Fingerstache</th>
-            <td>Kale</td>
-            <td>Chips</td>
-            <td>Keytar</td>
-        </tr>
-        <tr>
-            <th scope="row">Sriracha</th>
-            <td>Gluten-free</td>
-            <td>Ennui</td>
-            <td>Keffiyeh</td>
-        </tr>
-        <tr>
-            <th scope="row">Thundercats</th>
-            <td>Jean</td>
-            <td>Shorts</td>
-            <td>Biodiesel</td>
-        </tr>
-        <tr>
-            <th scope="row">Terry</th>
-            <td>Richardson</td>
-            <td>Swag</td>
-            <td>Blog</td>
-        </tr>
-        </table>
-        <p>It’s good to have information organized.</p>
+        <h2>2-3. Способы создания шаблона email + примеры</h2>
+        <ul>
+            <li>создание с нуля</li>
+        </ul>
     </section>
 
     <section class="slide" id="picture">
-        <h2>Pictures</h2>
-        <figure>
-            <img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
-        <style>
-            #picture h2 {
-                color: white;
-            }
-        </style>
+        <h2>2-3. Способы создания шаблона email + примеры</h2>
+        <ul>
+            <li>создание с нуля</li>
+            <li>HTML-шаблон - <a href="https://emailframe.work/">emailframe</a></li>
+        </ul>
     </section>
 
     <section class="slide">
-        <h2 class="shout shrink">You can even shout this way</h2>
+        <h2>2-3. Способы создания шаблона email + примеры</h2>
+        <ul>
+            <li>создание с нуля</li>
+            <li>HTML-шаблон - <a href="https://emailframe.work/">emailframe</a></li>
+            <li>Онлайн-редактор - <a href="https://mosaico.io/editor-0.17.5.html#26j34w2" target="_blank">mosaico,</a> <a href="https://templates.campaignmonitor.com/canvas/design/13-the-blueprint-3#/editor" target="_blank">campaign monitor</a></li>
+        </ul>
     </section>
 
     <section class="slide">
-        <h2>Inner navigation</h2>
-        <ol>
-            <li>Lets you reveal list items one by one</li>
-            <li class="next">To keep some key points</li>
-            <li class="next">In secret from audience</li>
-            <li class="next">But it will work only once</li>
-            <li class="next">Nobody wants to see the same joke twice</li>
-        </ol>
+        <h2>2-3. Способы создания шаблона email + примеры</h2>
+        <ul>
+            <li>создание с нуля</li>
+            <li>HTML-шаблон - <a href="https://emailframe.work/">emailframe</a></li>
+            <li>Онлайн-редактор - <a href="https://mosaico.io/editor-0.17.5.html#26j34w2" target="_blank">mosaico,</a> <a href="https://templates.campaignmonitor.com/canvas/design/13-the-blueprint-3#/editor" target="_blank">campaign monitor</a></li>
+            <li>email-фреймворк - <a href="https://get.foundation/emails/docs/" target="_blank">Foundation for Emails</a></li>
+        </ul>
     </section>
 
-    <section class="slide" id="see-more">
-        <h2 class="shout">
-            <img src="pictures/logo.svg" alt="Shower logo">
-            <a href="https://github.com/shower/shower">See more on GitHub</a>
-        </h2>
-        <style>
-            #see-more h2 {
-                font-size: 100px
-            }
-
-            #see-more img {
-                width: 0.72em;
-                height: 0.72em;
-            }
-        </style>
+    <section class="slide">
+        <h2>4. Тестирование email</h2>
+        <ul>
+            <li>Проверка валидности разметки - <a href="https://www.htmlemailcheck.com/check/" target="_blank">HTML Email Check</a></li>
+            <li>Отправка тестового письма - <a href="https://putsmail.com/tests/5aa57d36-473b-40d0-bbda-25bdb72c8e54" target="_blank">PutsMail</a></li>
+        </ul>
     </section>
 
-    <footer class="badge">
-        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
-    </footer>
+    <section class="slide">
+        <h2>Спасибо!</h2>
+    </section>
 
     <div class="progress"></div>
 
     <script src="node_modules/@shower/core/dist/shower.js"></script>
-    <!-- Copyright © 3000 Yours Truly, Famous Inc. -->
 
 </body>
 </html>
